Added error handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+sonar-project.properties
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
